Add MCP server support for App Store reviews analysis
- Implement MCP server using @modelcontextprotocol/sdk
- Add fetchAppStoreReviews tool for fetching reviews
- Add app-reviews resource for structured data access
- Add 3 analysis prompts: analyze-reviews, review-summary, compare-reviews
- Update package.json with MCP dependencies and scripts
- Add MCP configuration files (.mcp.json, mcp-config.json)
- Include test scripts for MCP functionality validation
- Update README with MCP setup and usage instructions

--- a/package.json
+++ b/package.json
@@ -5,16 +5,27 @@
   "main": "index.js",
   "type": "module",
   "bin": {
-    "app-store-reviews": "./index.js"
+    "app-store-reviews": "./index.js",
+    "app-store-reviews-mcp": "./mcp-server.js"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "mcp": "node mcp-server.js"
   },
-  "keywords": ["app-store", "reviews", "cli", "ios"],
+  "keywords": [
+    "app-store",
+    "reviews",
+    "cli",
+    "ios",
+    "mcp",
+    "model-context-protocol"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.17.1",
     "commander": "^11.1.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "zod": "^3.25.76"
   }
 }
